--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   persian_fonts: ^1.0.4
   image_picker: ^0.6.0+17
   shamsi_date: ^1.0.0
+  url_launcher: ^6.0.17
 
 
 dev_dependencies:
